[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource( 1 )

[node name="HostButton" type="Button" parent="."]
margin_left = 669.0
margin_top = 73.0
margin_right = 836.0
margin_bottom = 143.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
margin_left = 681.0
margin_top = 191.0
margin_right = 838.0
margin_bottom = 258.0
text = "Join"

[node name="IPBar" type="LineEdit" parent="."]
margin_left = 486.0
margin_top = 206.0
margin_right = 651.0
margin_bottom = 245.0
text = "127.0.0.1"

[node name="ColorPicker" type="ColorPicker" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.05
anchor_bottom = 0.07
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
edit_alpha = false

[node name="CharacterColorLabel" type="Label" parent="."]
margin_left = 152.0
margin_top = 17.0
margin_right = 248.0
margin_bottom = 31.0
text = "Character color"

[node name="SenseSlider" type="HSlider" parent="."]
margin_left = 488.0
margin_top = 467.0
margin_right = 851.0
margin_bottom = 483.0
max_value = 5.0
step = 0.01
value = 1.0

[node name="SenseLabel" type="Label" parent="."]
margin_left = 634.0
margin_top = 443.0
margin_right = 738.0
margin_bottom = 457.0
text = "Aim sensitivity: 1"
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="value_changed" from="SenseSlider" to="." method="_on_SenseSlider_value_changed"]
